crates/seasonvar-core/tests/snapshots/export_snapshots__export@json.snap
---
source: crates/seasonvar-core/tests/export_snapshots.rs
expression: out
---
[
  {
    "ordinal": 1,
    "number": 1,
    "title": "1 серия SD/FullHD RuDub",
    "quality": "SD/FullHD",
    "translator": "RuDub",
    "media_url": "https://data04-cdn.11cdn.org/fi2lm/8c84f820a8d5453aab6be6ad8bed9488/7f_Extraktori.s02e01.HD1080p.WEBRip.Rus.RuDub.tv.v2a1.08.08.26.mp4",
    "subtitles": [],
    "file_name": "Extraktory/Season 02/Extraktory S02E01 [RuDub].mp4"
  },
  {
    "ordinal": 2,
    "number": 2,
    "title": "2 серия SD/FullHD RuDub",
    "quality": "SD/FullHD",
    "translator": "RuDub",
    "media_url": "https://data05-cdn.11cdn.org/fi2lm/8c84f820a8d5453aab6be6ad8bed9488/7f_Extraktori.s02e02.HD1080p.WEBRip.Rus.RuDub.tv.v2a1.14.08.26.mp4",
    "subtitles": [],
    "file_name": "Extraktory/Season 02/Extraktory S02E02 [RuDub].mp4"
  }
]
