crates/seasonvar-core/tests/snapshots/export_snapshots__export@m3u.snap
---
source: crates/seasonvar-core/tests/export_snapshots.rs
expression: out
---
#EXTM3U
#EXTINF:-1,1 серия SD/FullHD RuDub
https://data04-cdn.11cdn.org/fi2lm/8c84f820a8d5453aab6be6ad8bed9488/7f_Extraktori.s02e01.HD1080p.WEBRip.Rus.RuDub.tv.v2a1.08.08.26.mp4
#EXTINF:-1,2 серия SD/FullHD RuDub
https://data05-cdn.11cdn.org/fi2lm/8c84f820a8d5453aab6be6ad8bed9488/7f_Extraktori.s02e02.HD1080p.WEBRip.Rus.RuDub.tv.v2a1.14.08.26.mp4
